feat: adds snap and `icloud-for-linux`

--- a/home/.chezmoiscripts/linux/run_onchange_after_03-install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_after_03-install-packages.sh.tmpl
@@ -1,6 +1,7 @@
 {{ if eq .chezmoi.os "linux" -}}
 #!/bin/bash
 
+echo "----- start: 03-install-packages.sh -----"
 if [ ! -x "$(command -v yay)" ]; then
     mkdir -p ~/Coding/Personal
     cd ~/Coding/Personal || exit 1
@@ -30,4 +31,5 @@ yay -S --noconfirm --needed {{ . | quote }}
 flatpak install -y {{ . | quote }}
 {{ end -}}
 
+echo "----- end: 03-install-packages.sh -----"
 {{ end -}}
