--- a/home/dot_config/exact_homebrew/Brewfile_Basics.tmpl
+++ b/home/dot_config/exact_homebrew/Brewfile_Basics.tmpl
@@ -21,6 +21,8 @@ brew "openjdk@17"
 brew "rustup-init"
 # Package manager for the Lua programming language
 brew "luarocks"
+# Extremely fast Python package installer and resolver, written in Rust
+brew "uv"
 
 # ---------------------------------------------------------------
 # Git
