build(deps): adds `fw-endeavouros-01` Brewfile

--- a/home/dot_config/exact_homebrew/Brewfile_Basics.tmpl
+++ b/home/dot_config/exact_homebrew/Brewfile_Basics.tmpl
@@ -23,6 +23,8 @@ brew "rustup-init"
 brew "luarocks"
 # Extremely fast Python package installer and resolver, written in Rust
 brew "uv"
+# Open source programming language to build simple/reliable/efficient software
+brew "go"
 
 # ---------------------------------------------------------------
 # Git
